--- a/src/frontend/css/main.less
+++ b/src/frontend/css/main.less
@@ -6,7 +6,6 @@
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
-  color: #222;
 }
 
 header {
@@ -16,6 +15,7 @@ header {
   background-color: #6c757d;
 
   h1 {
+    color: #e2e2e2;
     text-align: center;
   }
 
@@ -29,14 +29,12 @@ header {
 
     a {
       margin: 10px;
-
-      color: yellowgreen;
       font-weight: 500;
-
-      :hover {
-        color: whitesmoke;
-        text-decoration: underline;
-      }
+      color: yellowgreen;
+    }
+    a:hover {
+      color: whitesmoke;
+      text-decoration: underline;
     }
   }
 }
@@ -44,10 +42,10 @@ header {
 .wrapper {
   width: 700px;
   min-height: 1000px;
-
   margin: auto;
 
   background-color: beige;
+  color: #525252;
 
   p {
     width: 100%;
