--- a/src/frontend/templates/dashboard.html
+++ b/src/frontend/templates/dashboard.html
@@ -1,26 +1,26 @@
-<div class="container">
-    <div class="col-12-lg dashboard">
-        <div class="row time-track--list">
-            <div class="col-9-lg time-track--list">
-                <select class="form-control" name="timetracking" multiple disabled></select>
-            </div>
-            <div class="col-3-lg time-track--list">
-                <select class="form-control" name="timetracking" multiple disabled></select>
-            </div>
+<div class="col-12-lg dashboard">
+    <div class="row time-track--list">
+        <div class="col-9-lg time-track--list">
+            <h4>Trackliste</h4>
+            <select class="form-control" name="timetracking" multiple disabled></select>
         </div>
-        <div class="row time-track--list">
-            <div class="col-3-lg time-track--list">
-                <button id="btn-start" class="btn" onclick=""></button>
-            </div>
-            <div class="col-3-lg time-track--list">
-                <button id="btn-break" class="btn" onclick=""></button>
-            </div>
-            <div class="col-3-lg time-track--list">
-                <button id="btn-end" class="btn" onclick=""></button>
-            </div>
-            <div class="col-3-lg time-track--list">
-                <button id="btn-pdf" class="btn" onclick=""></button>
-            </div>
+        <div class="col-3-lg time-track--list">
+            <h4>Getrackte Monate</h4>
+            <select class="form-control" name="timetracking" multiple disabled></select>
+        </div>
+    </div>
+    <div class="row time-track--list">
+        <div class="col-3-lg time-track--list">
+            <button type="button" id="btn-start" class="btn" onclick="">Beginne</button>
+        </div>
+        <div class="col-3-lg time-track--list">
+            <button type="button" id="btn-break" class="btn" onclick="">Pause</button>
+        </div>
+        <div class="col-3-lg time-track--list">
+            <button type="button" id="btn-end" class="btn" onclick="">Ende</button>
+        </div>
+        <div class="col-3-lg time-track--list">
+            <button type="button" id="btn-pdf" class="btn" onclick="">PDF</button>
         </div>
     </div>
 </div>
