--- a/src/frontend/css/main.less
+++ b/src/frontend/css/main.less
@@ -1,21 +1,31 @@
+@header-background: #6c757d;
+@color-theme-green: yellowgreen;
+@width-login: 400px;
+
+
 * {
   margin: 0;
   padding: 0;
 }
 
+.d-block {
+  width: 100%;
+}
+
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
-  color: #222;
 }
 
 header {
   width: 100%;
   min-height: 100px;
 
-  background-color: #6c757d;
+  background-color: @header-background;
+
 
   h1 {
+    color: #e2e2e2;
     text-align: center;
   }
 
@@ -29,29 +39,38 @@ header {
 
     a {
       margin: 10px;
-
-      color: yellowgreen;
       font-weight: 500;
-
-      :hover {
-        color: whitesmoke;
-        text-decoration: underline;
-      }
+      color: @color-theme-green;
+    }
+    a:hover {
+      color: whitesmoke;
+      text-decoration: underline;
     }
   }
 }
 
 .wrapper {
-  width: 700px;
   min-height: 1000px;
 
-  margin: auto;
+  .container {
+    min-height: 500px;
+    width: 700px;
+    margin: auto;
+    padding: 30px 10px;
 
-  background-color: beige;
+    background-color: beige;
+    color: #525252;
 
-  p {
-    width: 100%;
-    margin: 10px 0;
+    p {
+      width: 100%;
+      margin: 10px 0;
+    }
+
+    :after {
+      height: 300px;
+      position: static;
+
+    }
   }
 }
 
@@ -65,3 +84,5 @@ footer {
 
   background-color: darkred;
 }
+
+@import 'login.less';
