--- a/src/frontend/css/main.less
+++ b/src/frontend/css/main.less
@@ -85,4 +85,15 @@ footer {
   background-color: darkred;
 }
 
+.input-field {
+  background-color: darkgrey;
+  width: 550px;
+  margin: 5px 15px;
+  padding: 5px 30px;
+
+  label {
+    font-size: 1.2rem;
+  }
+}
+
 @import 'login.less';
