--- a/src/frontend/templates/dashboard.html
+++ b/src/frontend/templates/dashboard.html
@@ -1,26 +1,26 @@
 <div class="col-12-lg dashboard">
-    <div class="row time-track--list">
-        <div class="col-9-lg time-track--list">
+    <div class="row tracking-list">
+        <div class="col-9-lg">
             <h4>Trackliste</h4>
             <select class="form-control" name="timetracking" multiple disabled></select>
         </div>
-        <div class="col-3-lg time-track--list">
+        <div class="col-3-lg">
             <h4>Getrackte Monate</h4>
             <select class="form-control" name="timetracking" multiple disabled></select>
         </div>
     </div>
-    <div class="row time-track--list">
-        <div class="col-3-lg time-track--list">
-            <button type="button" id="btn-start" class="btn" onclick="">Beginne</button>
+    <div class="row">
+        <div class="col-3-lg">
+            <button type="button" id="btn-time" class="btn" onclick="start_work()">Beginne</button>
         </div>
-        <div class="col-3-lg time-track--list">
-            <button type="button" id="btn-break" class="btn" onclick="">Pause</button>
+        <div class="col-3-lg">
+            <button type="button" id="btn-break" class="btn" onclick="breaking()">Pause</button>
         </div>
-        <div class="col-3-lg time-track--list">
-            <button type="button" id="btn-end" class="btn" onclick="">Ende</button>
+        <div class="col-3-lg">
+            <button type="button" id="btn-change" class="btn" onclick="change_time()">&Auml;ndern</button>
         </div>
-        <div class="col-3-lg time-track--list">
-            <button type="button" id="btn-pdf" class="btn" onclick="">PDF</button>
+        <div class="col-3-lg">
+            <button type="button" id="btn-pdf" class="btn" onclick="create_pdf()">PDF</button>
         </div>
     </div>
 </div>
