--- a/src/frontend/templates/login.html
+++ b/src/frontend/templates/login.html
@@ -1,4 +1,5 @@
 <div class="col-12-lg login-area">
+    <input type="hidden" name="action" value="login">
     <div class="row username--input-field">
         <span class="d-block">
             <label for="username-field">Username:</label>
@@ -10,7 +11,7 @@
     <div class="row password--input-field">
         <span class="d-block"><label for="password-field">Passwort:</label></span>
         <span class="d-block">
-            <input type="password" id="password-field" class="form-control" name="username" placeholder="Passwort eintippen">
+            <input type="password" id="password-field" class="form-control" name="password" placeholder="Passwort eintippen">
         </span>
     </div>
 </div>
