--- a/src/frontend/templates/register.html
+++ b/src/frontend/templates/register.html
@@ -33,7 +33,13 @@
         </div>
         <div class="row input-field">
             <label for="status-field">Status:</label>
-            <input type="text" id="status-field" class="form-control" name="status" placeholder="Userstatus eintragen">
+            <select type="text" id="status-field" class="form-control" name="status">
+                <option value="0">inaktiv</option>
+                <option value="1">Angestellter(User)</option>
+                <option value="7">Sachbearbeiter</option>
+                <option value="8">Chef</option>
+                <option value="9">Admin</option>
+            </select>
         </div>
     </div>
     <div class="col-12-md row button-field">
