--- a/src/frontend/templates/dashboard.html
+++ b/src/frontend/templates/dashboard.html
@@ -1,4 +1,5 @@
 <div class="col-12-lg dashboard">
+    <input type="hidden" name="user_id" />
     <div class="row tracking-list">
         <div class="col-9-lg">
             <h4>Trackliste</h4>
@@ -10,17 +11,20 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-3-lg">
-            <button type="button" id="btn-time" class="btn" onclick="start_work()">Beginne</button>
+        <div class="col-4-lg">
+            <button type="button" id="btn-time" class="btn" onclick="work(this.value)" value="start">Beginne Arbeit</button>
         </div>
-        <div class="col-3-lg">
-            <button type="button" id="btn-break" class="btn" onclick="breaking()">Pause</button>
+        <div class="col-4-lg">
+            <button type="button" id="btn-break" class="btn" onclick="break_work(this.value)" value="start">Pause</button>
         </div>
+        <div class="col-2-lg">
+            <button type="button" id="btn-pdf" class="btn" onclick="create_pdf()">PDF</button>
+        </div>
+    </div>
+    <div class="row change-time--box d-none">
+        <input type="datetime-local">
         <div class="col-3-lg">
             <button type="button" id="btn-change" class="btn" onclick="change_time()">&Auml;ndern</button>
-        </div>
-        <div class="col-3-lg">
-            <button type="button" id="btn-pdf" class="btn" onclick="create_pdf()">PDF</button>
         </div>
     </div>
 </div>
