--- a/src/frontend/css/dashboard.less
+++ b/src/frontend/css/dashboard.less
@@ -1,7 +1,26 @@
 .dashboard {
-
+  margin: auto;
   .btn {
     background-image: linear-gradient(whitesmoke, @color-theme-green);
     border: solid 1px @header-background;
+  }
+
+//  --- tracking ---
+
+  .tracking-list {
+    #tracking_list {
+      width: 250px;
+    }
+
+    #tracked_months {
+      width: 100px;
+    }
+  }
+
+  //  --- timestamp-changing ---
+
+
+  .change-time--box {
+    width: 400px;
   }
 }
