--- a/src/frontend/templates/dashboard.html
+++ b/src/frontend/templates/dashboard.html
@@ -3,26 +3,27 @@
     <div class="row tracking-list">
         <div class="col-9-lg">
             <h4>Trackliste</h4>
-            <select class="form-control" name="timetracking" multiple disabled></select>
+            <select class="form-control" id="tracking_list" name="track_id" multiple disabled></select>
         </div>
         <div class="col-3-lg">
             <h4>Getrackte Monate</h4>
-            <select class="form-control" name="timetracking" multiple disabled></select>
+            <select class="form-control" id="tracked_months" name="months" multiple disabled></select>
         </div>
     </div>
     <div class="row">
         <div class="col-4-lg">
-            <button type="button" id="btn-time" class="btn" onclick="work(this.value)" value="start">Beginne Arbeit</button>
+            <button type="button" id="btn-work" class="btn" onclick="work(this.value)" value="start">Arbeit beginnen</button>
         </div>
         <div class="col-4-lg">
-            <button type="button" id="btn-break" class="btn" onclick="break_work(this.value)" value="start">Pause</button>
+            <button type="button" id="btn-break" class="btn" onclick="break_work(this.value)" value="start">Pause beginnen</button>
         </div>
         <div class="col-2-lg">
             <button type="button" id="btn-pdf" class="btn" onclick="create_pdf()">PDF</button>
         </div>
     </div>
-    <div class="row change-time--box d-none">
-        <input type="datetime-local">
+    <div class="row form-group change-time--box d-none">
+        <input type="text" name="type__start_stop" class="form-control" disabled>
+        <input type="datetime-local" class="form-control" name="timestamp">
         <div class="col-3-lg">
             <button type="button" id="btn-change" class="btn" onclick="change_time()">&Auml;ndern</button>
         </div>
