--- a/src/frontend/css/dashboard.less
+++ b/src/frontend/css/dashboard.less
@@ -1,19 +1,24 @@
 .dashboard {
   margin: auto;
   .btn {
-    background-image: linear-gradient(whitesmoke, @color-theme-green);
+    background-image: linear-gradient(whitesmoke, @header-background);
     border: solid 1px @header-background;
   }
 
 //  --- tracking ---
 
   .tracking-list {
+    margin: auto;
+    width: 400px;
+
     #tracking_list {
-      width: 250px;
+      width: 260px;
+      margin: 0 10px;
     }
 
     #tracked_months {
       width: 100px;
+      margin: 0 10px;
     }
   }
 
