--- a/src/frontend/templates/balance.html
+++ b/src/frontend/templates/balance.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="balance">
+    <h3>Stundenbilanz</h3>
+    <div class="tracking-list">
+    </div>
+</div>
