--- a/src/frontend/css/balance.less
+++ b/src/frontend/css/balance.less
@@ -8,5 +8,24 @@
         list-style-type: none;
       }
     }
+
+    .week {
+      margin: 20px 0;
+    }
+  }
+
+
+  .tracked-months {
+    margin: 20px 0;
+
+    #tracked_months {
+      min-height: 300px;
+      width: 120px;
+    }
+
+    #btn-pdf {
+      width: 100%;
+      margin: 10px 0;
+    }
   }
 }
