--- a/src/frontend/css/dashboard.less
+++ b/src/frontend/css/dashboard.less
@@ -1,23 +1,24 @@
 .dashboard {
   margin: auto;
-  .btn {
-    background-image: linear-gradient(whitesmoke, @header-background);
-    border: solid 1px @header-background;
-  }
+
+   .button-field {
+     margin: 20px 30px;
+     padding: 0 50px;
+
+     .btn.track {
+       width: 200px;
+     }
+   }
 
 //  --- tracking ---
 
   .tracking-list {
     margin: auto;
-    width: 400px;
+    padding: 0 50px;
+    width: 600px;
 
     #tracking_list {
-      width: 260px;
-      margin: 0 10px;
-    }
-
-    #tracked_months {
-      width: 100px;
+      width: 350px;
       margin: 0 10px;
     }
   }
@@ -26,6 +27,14 @@
 
 
   .change-time--box {
-    width: 400px;
+    width: 600px;
+
+    .form-group {
+      width: 300px;
+    }
+
+    .btn {
+
+    }
   }
 }
