--- a/src/frontend/css/balance.less
+++ b/src/frontend/css/balance.less
@@ -12,7 +12,8 @@
     .week {
       margin: 20px 0;
 
-      //.li {display: inline-block}
+      h6 {cursor:pointer}
+      ul li {display: none}
     }
   }
 
