--- a/src/frontend/templates/balance.html
+++ b/src/frontend/templates/balance.html
@@ -17,3 +17,7 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="js/Classes/Calendar.js"></script>
+<script type="text/javascript" src="js/Classes/date.js"></script>
+<script type="text/javascript" src="js/Classes/Track.js"></script>
