--- a/src/frontend/templates/balance.html
+++ b/src/frontend/templates/balance.html
@@ -18,6 +18,6 @@
     </div>
 </div>
 
-<script type="text/javascript" src="js/Classes/Calendar.js"></script>
-<script type="text/javascript" src="js/Classes/date.js"></script>
-<script type="text/javascript" src="js/Classes/Track.js"></script>
+<!--<script type="text/javascript" src="js/Classes/Calendar.js"></script>-->
+<!--<script type="text/javascript" src="js/Classes/date.js"></script>-->
+<!--<script type="text/javascript" src="js/Classes/Track.js"></script>-->
